--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Flight creation and searching service",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon ./src/index.js"
   },
   "author": "Fardeen Khan",
   "license": "ISC",
